--- a/animation-activity/activity.css
+++ b/animation-activity/activity.css
@@ -28,16 +28,16 @@ nav {
 }
 
 @keyframes top {
-  from {}
-  to {}
+  from { background-color: rebeccapurple; }  
+  to { transform: translateY(45px) rotate(45deg); }
 }
 
 @keyframes middle {
-  from {}
-  to {}
+  0% {background-color: rebeccapurple; }
+  100% { transform:scale(0) }
 }
 
 @keyframes bottom {
-  from {}
-  to {}
+  0% { background-color: rebeccapurple; }
+  100% { transform: translateY(-45px) rotate(-45deg);}  
 }
